syntax = "proto3";


option java_multiple_files = true;
option java_outer_classname = "OSDProto";
option objc_class_prefix = "O";

package GrupoA.OSD.OSDService;

service OSD {
    rpc putObject (ObjectData) returns (EmptyMessage) {}

    rpc getObject (
}


message GetObjectArgs {
    
}

message ObjectData{
    int64 hash = 1;
    bytes objectData = 2;
}

message EmptyMessage {
}